[tool.poetry]
name = "flask_config"
version = "0.1.0"
description = ""
authors = ["Romain Libert <romainlibert291091@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dotenv-python = "^0.0.1"
flask = "^1.1.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.15.0"
pudb = "^2019.2"
pytest-pudb = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
